fdo#72137 Allocate enough points in MovingAverageRegression calc.

Change-Id: I9ae058cad678cdb86709a4e40e3d4bd47900d386